opam-version: "2.0"
name: "coq-coq2html"
version: "1.4"
maintainer: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
homepage: "https://github.com/xavierleroy/coq2html"
dev-repo: "git+https://github.com/xavierleroy/coq2html.git"
bug-reports: "https://github.com/xavierleroy/coq2html/issues"
license: "GPL-2.0-or-later"
build: [
  [make]
]
install: [
  [make "BINDIR=%{bin}%" "install"]
]

depends: [
  "ocaml"
  "coq" {>= "8.5"}
]
synopsis: "Generates HTML documentation from Coq source files.  Alternative to coqdoc"
authors: "Xavier Leroy <xavier.leroy@college-de-france.fr>"
